[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MZT"
version = "1.1.3-alpha"
authors = [
  { name="Shivam Pandey", email="pandeyshivam2017robotics@gmail.com" },
]
description = "Package to host DeepLearning modules for pytorch ecosystem, to ease out model implementations."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
        "Development Status :: 3 - Alpha",
        "Topic :: Utilities",
        "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"
]

[project.urls]
"Homepage" = "https://github.com/ShivamPR21/ModuleZooTorch"
